tests/baselines/reference/asyncInterface_es6.errors.txt
asyncInterface_es6.ts(1,1): error TS1042: 'async' modifier cannot be used here.


==== asyncInterface_es6.ts (1 errors) ====
    async interface I {  
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }